--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-/Users/shaulialgawi/Documents/VisaCal/VisaCal.xcodeproj/project.xcworkspace/xcuserdata/shaulialgawi.xcuserdatad/UserInterfaceState.xcuserstate
+VisaCal.xcodeproj
+
