--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 VisaCal.xcodeproj
 
+.DS_Store
+VisaCal.xcodeproj/project.xcworkspace/xcuserdata/shaulialgawi.xcuserdatad/UserInterfaceState.xcuserstate
