--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ VisaCal.xcodeproj
 
 .DS_Store
 VisaCal.xcodeproj/project.xcworkspace/xcuserdata/shaulialgawi.xcuserdatad/UserInterfaceState.xcuserstate
+/VisaCal.xcodeproj/xcuserdata
